crates/compiler/test_syntax/tests/snapshots/pass/when_with_numbers.expr.formatted.roc
when x is
    1 -> 2
    3 -> 4