crates/compiler/test_syntax/tests/snapshots/fail/when_over_indented_underscore.expr.roc
when 4 is
    5 -> 2
     _ -> 2
